--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,46 @@
 <!DOCTYPE html>
 <html lang="en"><head><title>Projects</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Projects</h1><section><p>
-      This page is a sort of scrap book of various projects that I have worked on over the years. Some of these are hobby projects while other were made in a academic or professional context.
-    </p></section></body></html>
+      This page server as a scrap book of a selection of the various software project I have worked on over the years. Some of these are hobby projects while others were made in a academic or professional context.
+    </p></section><section><h2>1. Realtime Occlusion Probes using SDF Volumes (2020)</h2><p>Unity Hackweek 2020 my group and I implemented GPU raymarching of signed distance fields stored as 3D textures. We used this to generate directional occlusion probes in realtime.</p><figure><img src="/projects/realtime_sdf_ao.gif" style="max-height: 24rem"/>
+<figcaption>Fig 1: Occlusion probes are updated in realtime by raymarching a SDF 3D texture.</figcaption></figure></section><section><h2>2. Hobby CPU Pathtracer (2020)</h2><p>
+      I started this project to solidify my understanding of pathtracing, BRDFs, and importance sampling.
+      A few highlights:
+    </p><ul><li>Written in Rust.</li><li>Parallel execution using <a href="https://crates.io/crates/crayon">crayon</a>.</li><li>Russian Roulette for path termination.</li><li>Deterministic.</li><li>Diffuse, dielectric, and specular materials.</li><li>Next Event Estimation.</li></ul><figure><img src="/projects/rust_pathtracer.jpg" style="max-height: 24rem"/>
+<figcaption>Fig 2: Cornell box with dielectric, diffuse, and specular materials.</figcaption></figure></section><section><h2>3. Bachelor Thesis: Evaluation of Spherical Function Bases (2019)</h2><p>
+      In realtime computer graphics we are often interested in compressing sets of spherical functions such as an irradiance field.
+      In my thesis I evaluated and compared several known spherical function bases such as Spherical Harmonics and Spherical Gaussians.
+      The result was a set of recommendations about which encoding techniques to use for particular types of signals (irradiance, radiance, occlusion/visibility, etc.).
+    </p><p>
+      I received the maximum grade for my report and defence
+      You can read the full report <a href="www.polylab.dk/projects/thesis.pdf">here</a>.
+    </p><figure><img src="/projects/thesis_results.png" style="max-height: 18rem"/>
+<figcaption>Fig 3: A key graph from the report&#x27;s analysis section that shows RMAE vs space requirements for various bases.</figcaption></figure><figure><img src="/projects/thesis_sh.png" style="max-height: 16rem"/>
+<figcaption>Fig 4: One of the SH illustrations I made for the report&#x27;s theory section.</figcaption></figure></section><section><h2>4. Lightmap Denoising Using Machine Learning (2019)</h2><p>
+      A machine learning-based denoiser can smooth out variance in lightmaps caused by low sample counts. This allows you to generate good-looking lightmaps much faster since you do not need to wait for convergence.</p><p>
+      At Unity Hackweek 2019 my group and I ported the <a href="https://github.com/OpenImageDenoise/oidn">Intel Open Image Denoiser</a> to Unity&#x27;s <a href="https://docs.unity3d.com/Manual/com.unity.barracuda.html">Barracuda platform</a> to enable it run on the GPU. Our primary goal was to learn about machine learning denoising.
+    </p><figure><img src="/projects/lightmap_denoising.jpg" style="max-height: 24rem"/>
+<figcaption>Fig 5: A lightmapped scene before (top) and after (bottom) denoising.</figcaption></figure></section><section><h2>5. GPU (CUDA) Pathtracer With Adaptive Sampling (2018)</h2><p>
+      For our final assignment in a course about parallel computation at university, my group and I wrote an adaptive GPU pathtracer written in C++/CUDA. The pathtracer detects converged pixels and removes them from the working set. Our primary focus was to make this detection and reduction logic as efficient as possible on modern GPUs.
+    </p><figure><img src="/projects/cuda_pathtracer_video.gif" style="max-height: 32rem"/>
+<figcaption>Fig 6: Rendering of animated directional light in GPU pathtracer.</figcaption></figure><figure><img src="/projects/cuda_pathtracer_variance.gif" style="max-height: 32rem"/>
+<figcaption>Fig 7: Visualization of per-pixel convergence.</figcaption></figure></section><section><h2>6. Spatially Coherent Lightmaps in Unity (2018)</h2><p>
+      Lightmap baking involves packing all lightmapped object into a set of lightmaps.
+      I devised and implemented a stable packing algorithm that bundled object that were nearby in world space into the same lightmaps.
+      The benefit of this is that it makes it possible to batch draw calls more efficiently at runtime.
+    </p><p>Due other priorities in Unity, this feature unfortunately never shipped.</p><figure><img src="/projects/spatially_coherent_packing.gif" style="max-height: 9999rem"/>
+<figcaption>Fig 8: Before and after enabling spatially coherent packing.</figcaption></figure></section><section><h2>7. Explicit Shape Sampling in Unity&#x27;s Progressive Lightmapper (2018)</h2><p>For Unity Hackweek 2018 my group and I added explicit sampling of disk/sphere/line lights in Unity&#x27;s progressive lightmapper.</p><figure><img src="/projects/shape_sampling.gif" style="max-height: 26rem"/>
+<figcaption>Fig 9: Unity&#x27;s progressive lightmapper with explicit sphere sampling.</figcaption></figure></section><section><h2>8. Lightmap Seam Stitching (2017)</h2><p>
+      A known problem with <a href="https://en.wikipedia.org/wiki/Lightmap">lightmapping</a> is seam artifacts along the borders of the UV islands that are neighbours in object space but separated in lightmap space.
+      To solve this problem in <a href="https://unity.com/">Unity</a>, I implemented a technique that &quot;stitches&quot; together the seams by performing a least square error minization over the border texels of the UV islands.
+      My solution to this was heavily inspired by <a href="http://miciwan.com/SIGGRAPH2013/Lighting%20Technology%20of%20The%20Last%20Of%20Us.pdf">Naughty Dog</a> and <a href="https://www.sebastiansylvan.com/post/LeastSquaresTextureSeams/">Sebastian Sylvan</a>.
+    </p><figure><img src="/projects/seam_stitching_sphere.gif" style="max-height: 22rem"/>
+<figcaption>Fig 10: Seam stitching on lightmapped sphere.</figcaption></figure><figure><img src="/projects/seam_stitching_terrain.gif" style="max-height: 32rem"/>
+<figcaption>Fig 11: Seam stitching on lightmapped terrain.</figcaption></figure></section><section><h2>9. Networked Lockstep Synchronization (2016)</h2><p>
+      An implementation of the lockstep synchronization algorithm used in some types of networked games.
+      By making the simulation (collision detection etc.) fully deterministic on the client, you only need to transmit player actions across the network (as opposed to continuously transmitting the full server state).
+    </p><figure><img src="/projects/lockstep.gif" style="max-height: 32rem"/>
+<figcaption>Fig 12: Deterministic simulation synchronized over TCP (original is 60fps).</figcaption></figure></section><section><h2>10. Hobby Engine (2015)</h2><p>
+      For fun and educational purposes I wrote a game engine from scratch in C++/OpenGL.
+      A few highlights:
+    </p><ul><li>Platform abstraction layer. Current only MacOS backend is implemented.</li><li>Data-oriented design using the Entity/Component pattern.</li><li>Deferred renderer with Variance Shadow Mapping, Screen Space Ambient Occlusion, and day/night cycle system.</li><li>Includes physics, pathfinding, steering, skeletal animation, and simple behaviour tree system for AI.</li><li>State simulation and rendering are completely decoupled (allowing for deterministic updates).</li></ul><p>Source code is <a href="https://github.com/raroni/Flowstone">available on Github</a>.</p><figure><img src="/projects/hobby_engine_2015.gif" style="max-height: 32rem"/>
+<figcaption>Fig 13: Sped-up day/night cycle in my hobby engine.</figcaption></figure></section></body></html>
