Fix link to bachelor thesis.

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
       The result was a set of recommendations about which encoding techniques to use for particular types of signals (irradiance, radiance, occlusion/visibility, etc.).
     </p><p>
       I received the maximum grade for my report and defence
-      You can read the full report <a href="www.polylab.dk/projects/thesis.pdf">here</a>.
+      You can read the thesis <a href="http://www.polylab.dk/projects/thesis.pdf">here</a>.
     </p><figure><img src="/projects/thesis_results.png" style="max-height: 18rem"/>
 <figcaption>Fig 3: A key graph from the report&#x27;s analysis section that shows RMAE vs space requirements for various bases.</figcaption></figure><figure><img src="/projects/thesis_sh.png" style="max-height: 16rem"/>
 <figcaption>Fig 4: One of the SH illustrations I made for the report&#x27;s theory section.</figcaption></figure></section><section><h2>4. Lightmap Denoising Using Machine Learning (2019)</h2><p>
