Update test page.

--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><title>Test Post</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Test Post</h1><section><p>Welcome to my website. Check <a href="index.html">the frontpage</a>.</p><p>Figure ref test: figure 2....</p><figure><img src="/ras.png" style="max-height: 6rem"/>
+<html lang="en"><head><title>Test Post</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Test Post</h1><section><p>Welcome to my website. Check <a href="index.html">the frontpage</a>.</p><p>Figure ref test: figure 4....</p><figure><img src="/ras.png" style="max-height: 6rem"/>
 <figcaption>Fig 1: Look at that face!</figcaption></figure><p>
       Checkout <a href="http://twitter.com/">this internet reference</a>.
     </p><p>Figure ref test: figure 1...</p><p>You got to check out <a href="#woohoo">section 4</a>.</p><p>
@@ -21,4 +21,6 @@ int main() {
   return 0;
 }
 </code></pre><div>Listing 2: ThIS iS mY CaPtion, yea.</div></div><p>We can reference this listing: listing 2.</p><p><a href="index.html">Go back</a>.</p><p>Look at the list:</p><ul><li>Item 1.</li><li>Item 2. Item with <a href="index.html">link</a>.</li></ul><p>Pretty cool. Please also checkout <a href="#woohoo">section 4</a>.</p><figure><img src="/ras.png" style="max-height: 6rem"/>
-<figcaption>Fig 2: Look at that face!</figcaption></figure></section><section><h2>3. Tester</h2><p>A paragraph...</p></section><section><h2 id="woohoo">4. Woohoo</h2><p>A paragraph...</p></section></body></html>
+<figcaption>Fig 2: Look at that face!</figcaption></figure></section><section><h2>3. Tester</h2><p>A paragraph...</p></section><section><h2 id="woohoo">4. Generated Figs</h2><p>Lets test an auto-generated figure.</p><figure><img src="/test/simple_test.gen.svg" style="max-height: 18rem"/>
+<figcaption>Fig 3: Simple figure.</figcaption></figure><p>How about a 3D plot?</p><figure><img src="/test/test3d.gen.svg" style="max-height: 18rem"/>
+<figcaption>Fig 4: Simple figure.</figcaption></figure></section></body></html>
