Fix minor spelling error in project scrapbook page.

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head><title>Project Scrapbook</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Project Scrapbook</h1><section><p>
-      This page serves as a scrapbook of a selection of the various software project I have worked on over the years. Some of these are hobby projects while others were made in a academic or professional context.
+      This page serves as a scrapbook of a selection of the various software project I have worked on over the years. Some of these are hobby projects while others were made in an academic or professional context.
     </p></section><section><h2>1. Realtime Constructive Solid Geometry Pathtracer (2021)</h2><p>
       A Constructive Solid Geometry realtime pathtracer that utilizes temporal and spatial filtering techniques to eliminate noise. In each frame each pixel samples the rendering equation integral (several bounces) and accumulates the results via a <a href="https://en.wikipedia.org/wiki/Moving_average#Exponential_moving_average">Moving Exponential Average</a>. The output is then denoised via my adaption of <a href="https://cg.ivd.kit.edu/publications/2017/svgf/svgf_preprint.pdf">SVGF</a>.
     </p><p>
