Rename projects page to 'Project Log'.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
       I love <strong>game engines</strong>, 3D graphics, and especially <strong>global illumination</strong>. These topics tend to combine <strong>mathematics</strong>, <strong>physics</strong>, and <strong>computation</strong> in fascinating ways.
     </p><p>
       Currently I enjoy working as a graphics programmer at <a href="https://unity.com/">Unity Technologies</a> in <strong>Copenhagen</strong>.
-    </p><ul><li><a href="projects.html">Project Scrapbook</a></li><li><a href="https://twitter.com/raroni86">Twitter</a></li><li><a href="https://www.linkedin.com/in/rasmusn/">LinkedIn</a></li></ul></section></body></html>
+    </p><ul><li><a href="projects.html">Project Log</a></li><li><a href="https://twitter.com/raroni86">Twitter</a></li><li><a href="https://www.linkedin.com/in/rasmusn/">LinkedIn</a></li></ul></section></body></html>
