--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head><title>Project Scrapbook</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Project Scrapbook</h1><section><p>
-      This page serves as a scrapbook of a selection of the various software project I have worked on over the years. Some of these are hobby projects while others were made in an academic or professional context.
+<html lang="en"><head><title>Project Log</title><meta charset="utf-8"></meta><link rel="stylesheet" href="/main.css"></link><link rel="stylesheet" href="/katex/katex.css"></link></head><body><h1>Project Log</h1><section><p>
+      Here I maintain a log of software projects that I have worked on over the years. Some of these are hobby projects while others were made in an academic or professional context.
     </p></section><section><h2>1. WIP: Realtime Lightmapper (2022)</h2><p>
       In recent years there&#x27;s been a lot of awesome GI solutions aimed at high-end GPUs, so I figured I&#x27;d try to instead make something aimed at less powerful hardware, like laptops and mobiles.
     </p><p>
